--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>bestcoders</groupId>
   <artifactId>examples</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.1-SNAPSHOT</version>
 
 
 <repositories>
@@ -23,6 +23,25 @@
 
 <build>
   <plugins>
+    <plugin>
+      <groupId>org.scalatest </groupId>
+      <artifactId>scalatest-maven-plugin</artifactId>
+      <version>1.0</version>
+      <configuration>
+        <reportsDirectory>${project.build}/surefire-reports</reportsDirectory>
+	<junitxml>.</junitxml>
+	<filereports>WDF Testsuite.txt</filereports>
+      </configuration>
+      <executions>
+        <execution>
+	  <id>test</id>
+	  <goals>
+	    <goal>test</goal>
+	  </goals>  
+	</execution>
+      </executions>
+    </plugin>
+
     <plugin>
       <groupId>org.scala-tools</groupId>
       <artifactId>maven-scala-plugin</artifactId>
@@ -75,7 +94,7 @@
   </dependency>
   <dependency>
       <groupId>org.scalatest</groupId>
-      <artifactId>scalatest_2.10</artifactId>
+      <artifactId>scalatest_2.11</artifactId>
       <version>3.0.0-M7</version>
   </dependency>
     <dependency>
